tests/fail/hallo_world.vi

use #root::IO::{
  println,
  println,
  print_ln,
};

pub fn main(#root::IO) {
  io.println(hallo, world)
}
